Bug 100001 - EM7455 in QMI mode requires FCC auth to get online
Summary: EM7455 in QMI mode requires FCC auth to get online
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: general (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-28 09:55 UTC by Aleksander Morgado
Modified: 2017-02-28 11:16 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Logs (11.25 KB, text/plain)
2017-02-28 09:55 UTC, Aleksander Morgado
Details
Logs after patch applied (12.13 KB, text/plain)
2017-02-28 11:16 UTC, Aleksander Morgado
Details

Description Aleksander Morgado 2017-02-28 09:55:47 UTC
Created attachment 129978 [details]
Logs

Looks like this EM7455 does the following sequence:
  --> Get Operating Mode
  <-- Low power
  --> Set Operating Mode (Online)
  <-- ERROR: invalid transaction
 
I manually run a FCC auth command through qmi-proxy and it went online right-away.
Comment 1 Aleksander Morgado 2017-02-28 10:07:37 UTC
Oh, looks like QMI translation is wrong. The error is really "InvalidTransition", which makes more sense.
Comment 2 Aleksander Morgado 2017-02-28 10:38:07 UTC
Fixed in git master, mm-1-6, mm-1-4.
Comment 3 Aleksander Morgado 2017-02-28 11:16:27 UTC
Created attachment 129982 [details]
Logs after patch applied


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.