broadband-modem-qmi: FCC auth if InvalidTransition when going online

https://bugs.freedesktop.org/show_bug.cgi?id=100001
(cherry picked from commit 21f315f6d554b93e4f098cfd0e94c484a8a0c5dc)